--- a/FoodMate/map/templates/map/popup.html
+++ b/FoodMate/map/templates/map/popup.html
@@ -3,8 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
 </head>
 <body>
+    <div id="map" style="margin:0 auto;margin-top:50px;width:500px;height:400px;"></div>
+    <form method="POST">
+         {% csrf_token %}
+        <input name="lat" id="lat" style="display:none"/>
+        <input name="lng" id="lng" style="display:none"/>
+        <input type="submit" style="display:block;margin:0 auto;margin-top:30px"/>
+    </form>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=df37e89ac92fde8fd129e706be001d3e"></script>
+    <script>
+		var container = document.getElementById('map');
+		var options = {
+			center: new kakao.maps.LatLng(37.543670, 127.077569),
+			level: 5
+		};
+		var map = new kakao.maps.Map(container, options);
 
+		var marker = new kakao.maps.Marker({
+            position: map.getCenter()
+        });
+        marker.setMap(map);
+
+        var latContainer = document.getElementById('lat')
+        var lngContainer = document.getElementById('lng')
+        latContainer.value = marker.getPosition().getLat();
+        lngContainer.value = marker.getPosition().getLng();
+        kakao.maps.event.addListener(map, 'click', function(mouseEvent) {
+            var latlng = mouseEvent.latLng;
+            marker.setPosition(latlng);
+            latContainer.value = latlng.getLat();
+            lngContainer.value = latlng.getLng();
+        });
+	</script>
 </body>
 </html>
