--- a/FoodMate/layout/base.html
+++ b/FoodMate/layout/base.html
@@ -13,6 +13,8 @@
         <input style="width:800px;" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
+        <button>알림</button>
+        <button>로그인</button>
     </nav>
     {% block content %}
     {% endblock %}
