Add signup button

--- a/FoodMate/accounts/templates/accounts/signup.html
+++ b/FoodMate/accounts/templates/accounts/signup.html
@@ -9,10 +9,15 @@
 </head>
 <body>
     <img style="display:block; margin:0 auto; margin-top:5%;" src="{% static "img/logo.png" %}"/>
+    {% if signUpFailed %}
+    <div class="alert alert-primary" role="alert">
+        유효하지 않은 입력입니다. 다시 입력해 주세요.
+    </div>
+    {% endif %}
     <div id="container">
         <form method="POST">
             {% csrf_token %}
-            {{ form.as_table }}
+            {{ form.as_p }}
 <!--            <input name="email" type="text" placeholder="아이디(이메일)" class="input_box"/>-->
 <!--&lt;!&ndash;            <input name="password" type="text" placeholder="비밀번호" class="input_box"/>&ndash;&gt;-->
 <!--            <input name="password1" type="text" placeholder="비밀번호" class="input_box"/>-->
