--- a/FoodMate/layout/base.html
+++ b/FoodMate/layout/base.html
@@ -14,7 +14,7 @@
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
         <button>알림</button>
-        <button>로그인</button>
+        <a href="{% url 'accounts:login' %}">로그인</a>
     </nav>
     {% block content %}
     {% endblock %}
