--- a/FoodMate/photo/static/css/photo_list.css
+++ b/FoodMate/photo/static/css/photo_list.css
@@ -21,15 +21,19 @@
     background-color: #F9F9F9;
     margin: 0 auto;
     margin-top: 13px;
+    margin-bottom: 26px;
 }
 .article_board{
-    width: 1038px;
+    width: 1070px;
     margin: 0 auto;
 }
 .article{
     float: left;
     width: 241px;
     height: 404px;
+    border: 1px solid black;
     background-color: #F9F9F9;
-    margin: 25px;
+    margin-right: 13px;
+    margin-left: 13px;
+    margin-bottom: 33px;
 }
