--- a/FoodMate/photo/templates/photo/photo_create.html
+++ b/FoodMate/photo/templates/photo/photo_create.html
@@ -1,18 +1,44 @@
 {% extends 'base.html' %}
+{% load static %}
+
 {% block content %}
-<div class="row">
-    <div class="col"></div>
-    <div class="col-12 col-xl-8 col-md-8">
-        <div class="alert alert-primary" role="alert">
-            모든 부분을 다 채워넣어주세요!!
-        </div>
-        <form action="" method="post" enctype="multipart/form-data">
+<head>
+        <link rel="stylesheet" href="{% static 'css/photo_create.css' %}">
+</head>
+        <div id="container">
+            <form action="" method="post" enctype="multipart/form-data">
             {% csrf_token %}
-            {{ photo_form.as_p }}
-            {{ image_formset.as_p }}
-            <input type="submit" value="Upload" class="btn btn-primary">
-        </form>
-    </div>
-    <div class="col"></div>
-</div>
+                <div id="photo_box">
+                    <div style="position: absolute; width: 214px; height: 215px; left: 27px; top: 21px; background: #E7E7E7;">
+                        {{ image_formset.as_p }}
+                        <div style="line-height: 215px;">
+                            <img align="center" src="{% static "img/Group.png" %}"/>
+                        </div>
+                    </div>
+                    <div class="heading10" style="position: absolute; width: 29px; height: 26px; left: 240px;
+top: 536px;">
+                        0/4
+                    </div>
+                    <div class="heading1" style="position: absolute;width: 120px;height: 20px;left: 194px; top: 569px;">
+                        사진을 추가해주세요
+                    </div>
+                </div>
+                <div style="position:relative; overflow:hidden; display:inline-block; height: 652px; width: 547px;">
+                    <input type="submit" value="저장" class="submit_button">
+                    <div style="position:relative">
+                        <span style="position:absolute; left: 110px; top: 97px;" class="number_font">개</span>
+                        <span style="position:absolute; left: 250px; top: 97px;" class="number_font">원</span>
+                        <span style="position:absolute; left: 285px; top: 97px;" class="category_font">카테고리</span>
+                        <div style="position:absolute; left:43px; top: 320px; width: 490px; height: 220px; background: #F9F9F9; border-radius: 5px;">
+                            <div style="position:relative;">
+                                <a href="{% url 'map:popup' %}"><img style="float: left; margin-left: 30px; margin-top: 12px; width: 207px; height: 197px;" src="{% static "img/find_area.png" %}"/></a>
+                                <div style="position:absolute; right: 157px; top: 80px;" class="area_font">거래 위치</div>
+                            </div>
+                        </div>
+                        {{ photo_form.as_p }}
+                    </div>
+                </div>
+            </form>
+        </div>
+
 {% endblock %}
