--- a/FoodMate/photo/templates/photo/photo_detail.html
+++ b/FoodMate/photo/templates/photo/photo_detail.html
@@ -1,25 +1,102 @@
 {% extends 'base.html' %}
 {% block title %}
 {% endblock %}
+{% load static %}
 
 {% block content %}
-<ul>
-    <li>{{object.category}}</li>
-    <li>{{object.author}}</li>
-    <li>{{object.title}}</li>
-    <li>{{object.text}}</li>
-    <li>{{object.count}}</li>
-    <li>{{object.money}}</li>
-    <li>{{object.created}}</li>
-    <li>{{object.updated}}</li>
-    <li>
-        <div class="carousel-inner">
-          {% for image in post.image_set.all %}
-            <img src="{{ image.image.url }}" class="card-img-top" alt="사진">
-          {% endfor %}
+<head>
+    <script type="text/javascript" src="{% static 'js/photo_detail.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'css/photo_detail.css' %}"/>
+</head>
+<div id="container">
+    <div class="image_list"  style="display: inline-block; height: 652px; width: 507px; border-radius: 5px; borer: 0 solid white; margin:0px;">
+        {% for imageList in image.all %}
+        {% if product == imageList.photo %}
+        <div class="image">
+            <img style="width: 507px; height: 652px;" src="{{ imageList.image.url }}" class="card-img-top" alt="사진">
         </div>
-    </li>
+        {% endif %}
+        {% endfor %}
+    </div>
 
-</ul>
+    <div class="post_text" style="display: inline-block; margin-bottom: 65px;">
+        <div style="text-align: left;">
+            <p id="deal_box">모집 중</p>
+            <img style="display: inline-block; margin-left:255px;" src="{% static 'img/comment.png' %}"/>
+            <img style="display: inline-block; margin-left: 50px;" src="{% static 'img/heart.png' %}"/>
+        </div>
+        <div id="title"> {{product.title}} </div>
+        <div style="text-align:left; margin-top: 32px;">
+            <span style="padding-left: 20px;" class="yellow"> {{product.count}} </span>
+            <span style="margin-left: 7px;" class="black1"> 개</span>
+            <span style="margin-left: 22px;" class="yellow"> {{product.money}} </span>
+            <span style="margin-left: 14px;" class="black1"> 원</span>
+        </div>
+        <div class="text">
+            {{product.text}}
+        </div>
+        <div style="overflow:hidden; width: 490px; height: 220px; background: #F9F9F9; border-radius: 5px; padding: 12px 18px;">
+            <div id="map" style="float:left; width: 208px; height: 196px; border-radius: 5px;"></div>
+            <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=df37e89ac92fde8fd129e706be001d3e"></script>
+            <script>
+                var container = document.getElementById('map');
+                var options = {
+                    center: new kakao.maps.LatLng(37.543670, 127.077569),
+                    level: 5
+                };
+                var map = new kakao.maps.Map(container, options);
 
+                var marker = new kakao.maps.Marker({
+                    position: map.getCenter()
+                });
+                marker.setMap(map);
+            </script>
+            <div style="float:left; text-align:left; margin-left:25px; margin-top: 0px; width: 221px; height: 196px; ">
+                <div>
+                    <img style="width: 32px; height: 32px;" src="{% static 'img/flower.png' %}"/>
+                    <span style="display:inline-block; margin-left: 10px; height: 20px; font-family: Noto Sans KR; font-style: normal; font-weight: bold; font-size: 20px; line-height: 20px; color: #000000;">{{product.author}}</span>
+                    <span>{{product.time_now }}</span>
+<!--                    <span>{{product.updated}}</span>-->
+                </div>
+                <div style="display: inline-block; margin-top: 24px; width: 63px; height: 23px; font-family: Noto Sans KR; font-style: normal; font-weight: bold; font-size: 16px; line-height: 23px; color: #000000;">거래 위치</div>
+                <div style="display: inline-block; margin-top: 7px; width: 178px; height: 46px; font-family: Noto Sans KR; font-style: normal; font-weight: normal; font-size: 16px; line-height: 23px; color: #000000;">{{product.area}}</div>
+                <div class="url" style="display: inline-block;">
+                    <a style="text-decoration:none; " href="{{product.url}}">링크 이동하기</a>
+                </div>
+                <img style="display: inline-block; width: 30px; margin-left: 8px;" src="{% static 'img/upload.png' %}"/>
+                <img style="display: inline-block; width: 30px;" src="{% static 'img/sign.png' %}"/>
+            </div>
+        </div>
+    </div>
+
+    <hr style="width: 1037px; border: 1px solid #000000; margin: 0 auto;">
+
+    <div style="width: 1037px; margin: 0 auto;">
+        {% for commentList in comment.all %}
+        {% if product == commentList.photo %}
+        <div style="margin-top: 17px; text-align: left; margin-bottom: 17px;">
+            <div>
+                <img style="margin-left: 25px; width: 40.73px; height: 40.73px;" src="{% static 'img/user_photo.png' %}"/>
+                <span class="nickname" style="display: inline-block; margin-left: 22.27px;"> {{ commentList.username }}</span>
+                <span class="time" style="display: inline-block; margin-left: 13px;"> {{ commentList.updated }}</span>
+            </div>
+            <div class="comment_box" style="display: inline-block; margin-top: 10px; margin-left:90px;">
+                {{ commentList.text }}
+            </div>
+            <img style="display: inline-block; margin-left:355px;" src="{% static 'img/comment_menu.png' %}"/>
+
+        </div>
+        {% endif %}
+        {% if product.author == commentList.username %}
+
+        {% endif %}
+    {% endfor %}
+    </div>
+
+    <form action="" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ comment_form.as_p }}
+        <input type="submit" value="댓글" class="btn btn-primary">
+    </form>
+</div>
 {% endblock %}
