fix login error

--- a/FoodMate/accounts/templates/accounts/login.html
+++ b/FoodMate/accounts/templates/accounts/login.html
@@ -11,6 +11,7 @@
     <img style="display: block; margin: 0 auto;" src="{% static "img/logo.png" %}"/>
     <div id="container">
         <form method="POST">
+            {% csrf_token %}
             {{ form.as_p }}
             <input type="submit" value="로그인" class="confirm_btn">
         </form>
