add comment view

--- a/FoodMate/layout/base.html
+++ b/FoodMate/layout/base.html
@@ -11,13 +11,12 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/slick-1.8.1/slick/slick.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/slick-1.8.1/slick/slick-theme.css' %}"/>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&family=Roboto&display=swap" rel="stylesheet">
-
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin:30px">
         <img src="{% static "img/logo.png" %}"/>
         <form style=" margin-left:5%" class="form-inline my-2 my-lg-0">
-        <input style="width:800px;" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <input style="width:800px; height: 47px; line-height: 47px; text-align: center; background: #F4F4F4; border: 1px solid #FFBE00; border-radius: 23.5px;" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" value="복숭아의 계절, 올 여름 물복/딱복은 어떠신가요?">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
         <button>알림</button>
