--- a/FoodMate/accounts/templates/accounts/agreement.html
+++ b/FoodMate/accounts/templates/accounts/agreement.html
@@ -24,7 +24,7 @@
     <input type="checkbox">
     이벤트 및 광고성 정보 수신 (선택)
 </div>
-<hr>
+<hr style="width:531px;">
 <div style="margin:0 auto; margin-top: 50px; width:533px;">
     <input type="checkbox">
     모두 동의하기
