--- a/FoodMate/photo/templates/photo/photo_list.html
+++ b/FoodMate/photo/templates/photo/photo_list.html
@@ -12,17 +12,22 @@
 
 <div style="margin-top:50px">
     <!--  해당 for문은 data라는 dictionary에서 article은 key, image는 value가 각각 할당되어 반복됨  -->
-    <button id="write_button">게시물 작성하기</button>
+    <a id="write_button" href="{% url 'photo:create' %}">게시물 작성하기</a>
     <div id="category_board"></div>
     <div class="article_board">
-    {% for article, image in data.items %}
-        <div class="article">
-            <img src="{{ image }}" style="object-fit: contain; width:100px; height:100px">
-            <div>{{ article.title }}</div>
-            <span>{{ article.count }}개</span>
-            <span>{{ article.money }}원</span>
-        </div>
-    {% endfor %}
+    {% if data %}
+        {% for article, image in data.items %}
+            <div class="article">
+                <img src="{{ image }}" style="object-fit: contain; width:100px; height:100px">
+                <div>{{ article.title }}</div>
+                <span>{{ article.count }}개</span>
+                <span>{{ article.money }}원</span>
+            </div>
+        {% endfor %}
+    {% else %}
+        <img style="position:relative; top:100px; left:380px; display:block;" src="{% static 'img/shape.png' %}"/>
+        <div style="position:relative; top:-180px; text-align:center; background-color:transparent; font-weight: bold; font-size: 24px;">검색 결과가 없습니다.</div>
+    {% endif %}
     </div>
 </div>
 {% endblock %}
