--- a/FoodMate/accounts/static/css/login.css
+++ b/FoodMate/accounts/static/css/login.css
@@ -25,7 +25,8 @@
     margin: 10px;
 }
 #bottom_bar{
-    width: 200px;
+    width: 400px;
     margin: 0 auto;
     margin-top: 80px;
+    text-align: center;
 }
