--- a/FoodMate/layout/base.html
+++ b/FoodMate/layout/base.html
@@ -13,12 +13,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&family=Roboto&display=swap" rel="stylesheet">
 
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin:30px">
-        <img src="{% static "img/logo.png" %}"/>
-        <form style=" margin-left:5%" class="form-inline my-2 my-lg-0">
-        <input style="width:800px;" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+<body style="background-color:#F9F9F9;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin:30px;">
+        <img style="cursor:pointer;" src="{% static "img/logo.png" %}" onclick="location.href='{% url 'photo:list' %}'" />
+        <form style="margin-left:5%" class="form-inline my-2 my-lg-0" action="{% url 'photo:search' %}" method="POST">
+        {% csrf_token %}
+            <input style="width:800px;" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query_str" value="{{query_str}}">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
         <button>알림</button>
         <a href="{% url 'accounts:login' %}">로그인</a>
