Fix search error & Add article click event

--- a/FoodMate/accounts/templates/accounts/agreement.html
+++ b/FoodMate/accounts/templates/accounts/agreement.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
-<img style="display:block; margin:0 auto; margin-top:5%;" src="{% static "img/logo.png" %}"/>
+<img style="cursor:pointer; display:block; margin:0 auto; margin-top:5%;" src="{% static "img/logo.png" %}" onclick="location.href='{% url 'photo:list' %}'"/>
 <div style="margin:0 auto; margin-top: 50px; width:533px;">
     <input type="checkbox">
     서비스 이용약관 동의 (필수)
