--- a/FoodMate/photo/templates/photo/photo_detail.html
+++ b/FoodMate/photo/templates/photo/photo_detail.html
@@ -27,7 +27,11 @@
             <p class="deal_box"> 모집 완료 </p>
             {% endif %}
             <img style="display: inline-block; margin-left:255px;" src="{% static 'img/comment.png' %}"/>
-            <img style="display: inline-block; margin-left: 50px;" src="{% static 'img/heart.png' %}"/>
+            <p style="display: inline-block; margin-top:80px; margin-bottom:16px; width: 20px; height: 29px; padding-left: 7px; font-family: Noto Sans KR; font-style: normal; font-weight: normal; font-size: 20px; line-height: 29px; color: #000000;"> {{ comment_count }}</p>
+            <a href="{% url 'photo:like' object.id %}">
+                <img style="display: inline-block; margin-left: 17px;" src="{% static 'img/heart.png' %}"/>
+            </a>
+            <p style="display: inline-block; margin-top:80px; margin-bottom:16px; width: 20px; height: 29px; padding-left: 7px; font-family: Noto Sans KR; font-style: normal; font-weight: normal; font-size: 20px; line-height: 29px; color: #000000;"> {{ object.like.all.count }}</p>
         </div>
         <div id="title"> {{product.title}} </div>
         <div style="text-align:left; margin-top: 32px;">
