--- a/FoodMate/layout/base.html
+++ b/FoodMate/layout/base.html
@@ -11,22 +11,36 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/slick-1.8.1/slick/slick.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/slick-1.8.1/slick/slick-theme.css' %}"/>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
 </head>
 <body style="background-color:#F9F9F9;">
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin:30px;">
         <img style="cursor:pointer;" src="{% static "img/logo.png" %}" onclick="location.href='{% url 'photo:list' %}'" />
         <form style="margin-left:5%" class="form-inline my-2 my-lg-0" action="{% url 'photo:search' %}" method="POST">
         {% csrf_token %}
-            <input style="width:800px;" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query_str" value="{{query_str}}">
+            <input style="width: 800px; background: #F4F4F4; border: 1px solid #FFBE00; border-radius: 23.5px;font-family: Noto Sans KR;font-style: normal;font-weight: normal;font-size: 20px;line-height: 29px; text-align: center; color: #5B5B5B;" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query_str" value="{{query_str}}">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
         <button>알림</button>
-        <a href="{% url 'accounts:login' %}">로그인</a>
+        {% if user.is_authenticated %}
+        <a style="margin-left:21px;" href="{% url 'accounts:profile' %}"><img style="width: 47px;height: 47px;" src="{% static "img/grape.png" %}"></a>
+        {% else %}
+        <a style="margin-left:21px;" href="{% url 'accounts:login' %}"><img style="width: 75px;height: 47px;" src="{% static "img/login.png" %}"></a>
+        {% endif %}
     </nav>
-    {% block content %}
-    {% endblock %}
+    <div>
+        {% block content %}
+        {% endblock %}
+    </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <footer style="height: 170px; background: #F9F9F9; margin-top:98px;">
+        <div style="width: 700px; margin:0 auto;">
+            <p style="font-family: Jua;font-style: normal;font-weight: normal;font-size: 13px;line-height: 16px;color: #3C3C3C;">삼삼오오</p>
+            <p style="font-family: Noto Sans KR;font-style: normal;font-weight: bold;font-size: 13px;line-height: 19px;color: #3C3C3C;">Copyright ⓒ 2020 삼삼오오. 모든 권리 보유  개인정보 처리방침  |  웹 사이트 이용 약관  |  법적 고지  |  사이트 맵  |  광고정책</p>
+            <p style="font-family: Noto Sans KR;font-style: normal;font-weight: 500;font-size: 11px;line-height: 16px;color: #3C3C3C;">상호 : 삼삼오오│대표자명 : 홍길동│개인정보│사업자등록번호 : 000-00-00000│통신판매업신고번호 : 제 0000-ㅇㅇㅇㅇ-00000호│주소 : 서울시 광진구 어쩌구│이메일 : abc@gggg.com</p>
+        </div>
+    </footer>
 </body>
 </html>
