--- a/FoodMate/layout/base.html
+++ b/FoodMate/layout/base.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'css/slick-1.8.1/slick/slick.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/slick-1.8.1/slick/slick-theme.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}"/>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body style="background-color:#F9F9F9;">
@@ -20,7 +21,30 @@
             <input style="width:800px;" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query_str" value="{{query_str}}">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
-        <button>알림</button>
+
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            알림
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            {% for alarm in request.user.alarms.all %}
+                <div class="dropdown-item alarm_item">
+                    <div class="alarm_writer">
+                        {{ alarm.comment.username }}
+                        <div class="alarm_time">
+                            15분전
+<!--                        {{ alarm.comment.created }}-->
+                        </div>
+                    </div>
+                    <div class="alarm_text">
+                        {{ alarm.comment.text }}
+                    </div>
+                </div>
+            {% endfor %}
+          </div>
+        </div>
+
+
         <a href="{% url 'accounts:login' %}">로그인</a>
     </nav>
     {% block content %}
