--- a/FoodMate/photo/templates/photo/photo_list.html
+++ b/FoodMate/photo/templates/photo/photo_list.html
@@ -11,12 +11,12 @@
     <script type="text/javascript" src="{% static 'js/photo_list.js' %}"></script>
 </head>
 <div>
-    <div class="image_list"  style="margin: 0 auto;width: 1839px; height: 327.5px;">
+    <div class="image_list" style="margin: 0 auto; height: 327.5px; margin-left: 40px; margin-right: 40px;">
         <div class="image">
-            <img style="width: 1839px; height: 327.5px;" src="{% static "img/peach.png" %}" class="card-img-top" alt="사진">
+            <img style="width: 100%; height: 327.5px;" src="{% static "img/peach.png" %}" class="card-img-top" alt="사진">
         </div>
         <div class="image">
-            <img style="width: 1839px; height: 327.5px;" src="{% static "img/peach.png" %}" class="card-img-top" alt="사진">
+            <img style="width: 100%; height: 327.5px;" src="{% static "img/peach.png" %}" class="card-img-top" alt="사진">
         </div>
     </div>
 </div>
