add hover and my activity

--- a/FoodMate/accounts/templates/accounts/profile.html
+++ b/FoodMate/accounts/templates/accounts/profile.html
@@ -36,7 +36,7 @@
             </div>
         </div>
         <div style="width: 1193px; height: 75px; margin: 0 auto; margin-top: 45px; text-align: center;">
-            <a class="nav_font" href="">내 활동 </a>
+            <a class="nav_font" href="{% url 'photo:my_activity' %}">내 활동 </a>
             <a class="nav_font" href="{% url 'accounts:basic_info' %}">기본 정보 </a>
             <a class="nav_font" href="{% url 'accounts:login_info' %}">로그인 정보 </a>
             <a class="nav_font" href="{% url 'accounts:security' %}">보안 </a>
