--- a/FoodMate/photo/templates/photo/photo_list.html
+++ b/FoodMate/photo/templates/photo/photo_list.html
@@ -21,24 +21,58 @@
     </div>
 </div>
 
-<div style="margin-top:50px">
+<div style="margin-top:50px" class="article_board">
     <!--  해당 for문은 data라는 dictionary에서 article은 key, image는 value가 각각 할당되어 반복됨  -->
     <a id="write_button" href="{% url 'photo:create' %}">게시물 작성하기</a>
     <div id="category_board"></div>
-    <div class="article_board">
-    {% if data %}
-        {% for article, image in data.items %}
-            <div style="cursor:pointer;" class="article" onclick ="location.href='{% url 'photo:detail' article.id %}'">
-                <img src="{{ image }}" style="object-fit: contain; width:100px; height:100px">
-                <div>{{ article.title }}</div>
-                <span>{{ article.count }}개</span>
-                <span>{{ article.money }}원</span>
+    <div style="overflow:hidden; margin-top: 28px;" class="article_board">
+        {% if data %}
+            {% for article, image in data.items %}
+                <div style="margin-left: 0px; margin-right:25px; z-index: 1; position:relative; cursor:pointer;" class="article" onclick ="location.href='{% url 'photo:detail' article.id %}'">
+                    <img src="{{ image }}" class="article" style="">
+                    <p class="area" style="z-index: 3; position: absolute; right: 12px; top: 10px;"> {{ article.area }}</p>
+                    <div class="bg_parent">
+                        <div class="bg">
+                            <div style="margin-top: 172px; width: 240px; height: 404px; text-align: center; ">
+                                <p class="title">{{ article.title }}</p>
+                                    <div>
+                                        <span class="yellow_font">{{ article.count }}</span>
+                                        <span style="margin-left:5px;" class="white_font">개</span>
+                                        <span style="margin-left:16px;" class="yellow_font">{{ article.money }}</span>
+                                        <span style="margin-left:13px;"class="white_font">원</span>
+                                    </div>
+                            </div>
+                        </div>
+                        <div class="show_count" style="z-index: 3; position: absolute; right:0; bottom: 0px; width: 100px; height: 30px;">
+                            <img style="display: inline-block;" src="{% static 'img/comment_white.png' %}"/>
+                            <p class="white" style="display: inline-block; margin-left: 4px;"> 0 </p>
+                            <img style="margin-left:12px; display: inline-block;" src="{% static 'img/heart_white.png' %}"/>
+                            <p class="white" style="margin-left:4px; display: inline-block;"> {{ article.like.count }}</p>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        {% else %}
+            <img style="position:relative; top:100px; left:380px; display:block;" src="{% static 'img/shape.png' %}"/>
+            <div style="position:relative; top:-180px; text-align:center; background-color:transparent; font-weight: bold; font-size: 24px;">검색 결과가 없습니다.</div>
             </div>
-        {% endfor %}
-    {% else %}
-        <img style="position:relative; top:100px; left:380px; display:block;" src="{% static 'img/shape.png' %}"/>
-        <div style="position:relative; top:-180px; text-align:center; background-color:transparent; font-weight: bold; font-size: 24px;">검색 결과가 없습니다.</div>
-    {% endif %}
+        {% endif %}
     </div>
+<!--    <div class="article_board">-->
+
+<!--    {% if data %}-->
+<!--        {% for article, image in data.items %}-->
+<!--            <div style="cursor:pointer;" class="article" onclick ="location.href='{% url 'photo:detail' article.id %}'">-->
+<!--                <img src="{{ image }}" style="object-fit: contain; width:100px; height:100px">-->
+<!--                <div>{{ article.title }}</div>-->
+<!--                <span>{{ article.count }}개</span>-->
+<!--                <span>{{ article.money }}원</span>-->
+<!--            </div>-->
+<!--        {% endfor %}-->
+<!--    {% else %}-->
+<!--        <img style="position:relative; top:100px; left:380px; display:block;" src="{% static 'img/shape.png' %}"/>-->
+<!--        <div style="position:relative; top:-180px; text-align:center; background-color:transparent; font-weight: bold; font-size: 24px;">검색 결과가 없습니다.</div>-->
+<!--    {% endif %}-->
+<!--    </div>-->
 </div>
 {% endblock %}
