--- a/FoodMate/layout/base.html
+++ b/FoodMate/layout/base.html
@@ -7,10 +7,12 @@
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="{% static 'css/slick-1.8.1/slick/slick.min.js' %}"></script>
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'css/slick-1.8.1/slick/slick.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/slick-1.8.1/slick/slick-theme.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}"/>
+
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
 </head>
@@ -64,7 +66,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <footer style="height: 170px; background: #F9F9F9; margin-top:98px;">
+    <footer style="background: #F9F9F9; margin-top:98px;">
         <div style="width: 700px; margin:0 auto;">
             <p style="font-family: Jua;font-style: normal;font-weight: normal;font-size: 13px;line-height: 16px;color: #3C3C3C;">삼삼오오</p>
             <p style="font-family: Noto Sans KR;font-style: normal;font-weight: bold;font-size: 13px;line-height: 19px;color: #3C3C3C;">Copyright ⓒ 2020 삼삼오오. 모든 권리 보유  개인정보 처리방침  |  웹 사이트 이용 약관  |  법적 고지  |  사이트 맵  |  광고정책</p>
