--- a/FoodMate/accounts/templates/accounts/profile.html
+++ b/FoodMate/accounts/templates/accounts/profile.html
@@ -1,28 +1,13 @@
-<!DOCTYPE html>
+{% extends 'base.html' %}
+
+{% block title %}
+{% endblock %}
+
+{% block content %}
 {% load static %}
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&family=Roboto&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
-    <script type="text/javascript" src="{% static 'js/profile.js' %}"></script>
-    <link rel="stylesheet" href="{% static 'css/profile.css' %}">
-</head>
-<body style="background-color:#F9F9F9;">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin:30px;">
-        <img style="cursor:pointer;" src="{% static "img/logo.png" %}" onclick="location.href='{% url 'photo:list' %}'" />
-        <form style="margin-left:5%" class="form-inline my-2 my-lg-0" action="{% url 'photo:search' %}" method="POST">
-        {% csrf_token %}
-            <input style="width:800px;" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query_str" value="{{query_str}}">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-        <button>알림</button>
-        <a style="margin-left:21px;" href="{% url 'accounts:profile' %}"><img style="width: 47px;height: 47px;" src="{% static "img/grape.png" %}"></a>
-    </nav>
+
+<link rel="stylesheet" href="{% static 'css/profile.css' %}">
+
     <div style="overflow: hidden; margin: 0 auto; margin-top: 5%;">
         <div style="width: 1193px; height: 140px; margin: 0 auto;">
             <img style="margin-top:0px; margin-right:5px; margin-left:120px; width: 113px; height: 113px;" src="{% static 'img/grape.png' %}"/>
@@ -41,20 +26,8 @@
             <a class="nav_font" href="{% url 'accounts:login_info' %}">로그인 정보 </a>
             <a class="nav_font" href="{% url 'accounts:security' %}">보안 </a>
         </div>
-        {% block content %}
-        {% endblock %}
-    </div>
-    <footer style="height: 170px; background: #F9F9F9; margin-top:98px;">
-        <div style="width: 950px; margin:0 auto;">
-            <p style="font-family: Jua;font-style: normal;font-weight: normal;font-size: 13px;line-height: 16px;color: #3C3C3C;">삼삼오오</p>
-            <p style="font-family: Noto Sans KR;font-style: normal;font-weight: bold;font-size: 13px;line-height: 19px;color: #3C3C3C;">Copyright ⓒ 2020 삼삼오오. 모든 권리 보유  개인정보 처리방침  |  웹 사이트 이용 약관  |  법적 고지  |  사이트 맵  |  광고정책</p>
-            <p style="font-family: Noto Sans KR;font-style: normal;font-weight: 500;font-size: 11px;line-height: 16px;color: #3C3C3C;">상호 : 삼삼오오│대표자명 : 홍길동│개인정보│사업자등록번호 : 000-00-00000│통신판매업신고번호 : 제 0000-ㅇㅇㅇㅇ-00000호│주소 : 서울시 광진구 어쩌구│이메일 : abc@gggg.com</p>
-        </div>
-    </footer>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
-</html>
+</div>
+{% endblock %}
+
 
 
